HUGE Refactor: Getting rid of all the Elements in the system and we're now using only Structs again. A bit more cleanup needed following this up, but much reduced code complexity and duplication.